overflow repair

--- a/styles/style.css
+++ b/styles/style.css
@@ -173,7 +173,7 @@ section.main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100vw;
+  width: 100%;
   position: relative;
 }
 section.main > img {
